// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CarrentCartItemsモジュールのテスト エラー 1`] = `
<div
  className="container"
>
  <div
    className="background"
  >
    <p>
      カートに商品がありません
    </p>
  </div>
</div>
`;

exports[`CarrentCartItemsモジュールのテスト カートに商品がありません(data.length === 0) 1`] = `
<div
  className="container"
>
  <div
    className="background"
  >
    <p>
      カートに商品がありません
    </p>
  </div>
</div>
`;

exports[`CarrentCartItemsモジュールのテスト ロード中 1`] = `
<div
  className="container"
>
  <div
    className="background"
  >
    <p>
      ロード中...
    </p>
  </div>
</div>
`;

exports[`CarrentCartItemsモジュールのテスト 最新の商品4つが表示される 1`] = `
<div
  className="cartItemsArea"
>
  <div
    className="cartItems"
  >
    <div
      className="pic_area"
    >
      <img
        alt="kagu"
        className="picture"
        data-nimg="fill"
        decoding="async"
        loading="lazy"
        onError={[Function]}
        onLoad={[Function]}
        sizes="100vw"
        src="/_next/image?url=%2Fhoge1&w=3840&q=75"
        srcSet="/_next/image?url=%2Fhoge1&w=640&q=75 640w, /_next/image?url=%2Fhoge1&w=750&q=75 750w, /_next/image?url=%2Fhoge1&w=828&q=75 828w, /_next/image?url=%2Fhoge1&w=1080&q=75 1080w, /_next/image?url=%2Fhoge1&w=1200&q=75 1200w, /_next/image?url=%2Fhoge1&w=1920&q=75 1920w, /_next/image?url=%2Fhoge1&w=2048&q=75 2048w, /_next/image?url=%2Fhoge1&w=3840&q=75 3840w"
        style={
          {
            "bottom": 0,
            "color": "transparent",
            "height": "100%",
            "left": 0,
            "objectFit": undefined,
            "objectPosition": undefined,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": "100%",
          }
        }
      />
    </div>
    <p
      className="cartName"
    >
      ダミー1
    </p>
    <div
      className="cartPrice"
    >
      <p>
        ¥ 
        11,000
      </p>
      <p>
        1個
      </p>
    </div>
  </div>
  <div
    className="cartItems"
  >
    <div
      className="pic_area"
    >
      <img
        alt="kagu"
        className="picture"
        data-nimg="fill"
        decoding="async"
        loading="lazy"
        onError={[Function]}
        onLoad={[Function]}
        sizes="100vw"
        src="/_next/image?url=%2Fhoge2&w=3840&q=75"
        srcSet="/_next/image?url=%2Fhoge2&w=640&q=75 640w, /_next/image?url=%2Fhoge2&w=750&q=75 750w, /_next/image?url=%2Fhoge2&w=828&q=75 828w, /_next/image?url=%2Fhoge2&w=1080&q=75 1080w, /_next/image?url=%2Fhoge2&w=1200&q=75 1200w, /_next/image?url=%2Fhoge2&w=1920&q=75 1920w, /_next/image?url=%2Fhoge2&w=2048&q=75 2048w, /_next/image?url=%2Fhoge2&w=3840&q=75 3840w"
        style={
          {
            "bottom": 0,
            "color": "transparent",
            "height": "100%",
            "left": 0,
            "objectFit": undefined,
            "objectPosition": undefined,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": "100%",
          }
        }
      />
    </div>
    <p
      className="cartName"
    >
      ダミー2
    </p>
    <div
      className="cartPrice"
    >
      <p>
        ¥ 
        22,000
      </p>
      <p>
        2個
      </p>
    </div>
  </div>
  <div
    className="cartItems"
  >
    <div
      className="pic_area"
    >
      <img
        alt="kagu"
        className="picture"
        data-nimg="fill"
        decoding="async"
        loading="lazy"
        onError={[Function]}
        onLoad={[Function]}
        sizes="100vw"
        src="/_next/image?url=%2Fhoge3&w=3840&q=75"
        srcSet="/_next/image?url=%2Fhoge3&w=640&q=75 640w, /_next/image?url=%2Fhoge3&w=750&q=75 750w, /_next/image?url=%2Fhoge3&w=828&q=75 828w, /_next/image?url=%2Fhoge3&w=1080&q=75 1080w, /_next/image?url=%2Fhoge3&w=1200&q=75 1200w, /_next/image?url=%2Fhoge3&w=1920&q=75 1920w, /_next/image?url=%2Fhoge3&w=2048&q=75 2048w, /_next/image?url=%2Fhoge3&w=3840&q=75 3840w"
        style={
          {
            "bottom": 0,
            "color": "transparent",
            "height": "100%",
            "left": 0,
            "objectFit": undefined,
            "objectPosition": undefined,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": "100%",
          }
        }
      />
    </div>
    <p
      className="cartName"
    >
      ダミー3
    </p>
    <div
      className="cartPrice"
    >
      <p>
        ¥ 
        33,000
      </p>
      <p>
        3個
      </p>
    </div>
  </div>
  <div
    className="cartItems"
  >
    <div
      className="pic_area"
    >
      <img
        alt="kagu"
        className="picture"
        data-nimg="fill"
        decoding="async"
        loading="lazy"
        onError={[Function]}
        onLoad={[Function]}
        sizes="100vw"
        src="/_next/image?url=%2Fhoge4&w=3840&q=75"
        srcSet="/_next/image?url=%2Fhoge4&w=640&q=75 640w, /_next/image?url=%2Fhoge4&w=750&q=75 750w, /_next/image?url=%2Fhoge4&w=828&q=75 828w, /_next/image?url=%2Fhoge4&w=1080&q=75 1080w, /_next/image?url=%2Fhoge4&w=1200&q=75 1200w, /_next/image?url=%2Fhoge4&w=1920&q=75 1920w, /_next/image?url=%2Fhoge4&w=2048&q=75 2048w, /_next/image?url=%2Fhoge4&w=3840&q=75 3840w"
        style={
          {
            "bottom": 0,
            "color": "transparent",
            "height": "100%",
            "left": 0,
            "objectFit": undefined,
            "objectPosition": undefined,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": "100%",
          }
        }
      />
    </div>
    <p
      className="cartName"
    >
      ダミー4
    </p>
    <div
      className="cartPrice"
    >
      <p>
        ¥ 
        44,000
      </p>
      <p>
        4個
      </p>
    </div>
  </div>
  <p
    className="other"
  >
    他
    1
    件
  </p>
</div>
`;
